DuPont DevSB/src/objects/SFDC_Script__c.object
<CustomObject>
    <fields>
        <fullName>AllowContinuation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows you to continue/edit a script.   To Allow for Continuation, you must have an Avail With Object specified otherwise no script header/results are created</description>
        <inlineHelpText>To Allow for Continuation, you must have an Avail With Object specified.</inlineHelpText>
        <label>AllowContinuation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Available_With__c</fullName>
        <label>Available With</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Leads</fullName>
                </value>
                <value>
                    <fullName>Contacts</fullName>
                </value>
                <value>
                    <fullName>Cases</fullName>
                </value>
                <value>
                    <fullName>Opportunities</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Qualification__cs</fullName>
                </value>
                <value>
                    <fullName>Request__cs</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Entitlements</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Help_for_Scripts__c</fullName>
        <formula>(HYPERLINK(&quot;/servlet/servlet.FileDownload?file=01530000000JWzS&quot;, &quot;Help for Scripts&quot;)) &amp; &quot; &quot; &amp; (IMAGE(&quot;/img/btn_help.gif&quot;, &quot;Help&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help for Scripts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Passing_Score__c</fullName>
        <description>The number of points the question taking the script has to earn to pass the script.</description>
        <label>Passing Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReturnToType__c</fullName>
        <label>ReturnToType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ReturnURL</fullName>
                </value>
                <value>
                    <fullName>Available_With Object</fullName>
                </value>
                <value>
                    <fullName>WriteTo Object</fullName>
                </value>
                <value>
                    <fullName>Script Header</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReturnToValue__c</fullName>
        <description>Determine where to redirect on save,  Value is dependant on ReturnToType
ReturnUrl: Expects a valid url
AvalibleWith Object: Object Name
Header, WriteTo Object:  no value required</description>
        <inlineHelpText>Determine where to redirect on save,  Value is dependant on ReturnToType
ReturnUrl: Expects a valid url
AvalibleWith Object: Object Name
Header, WriteTo Object:  no value required</inlineHelpText>
        <label>ReturnToValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Script_Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Use_Scoring__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Scoring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WriteToObject__c</fullName>
        <description>SiteScript: API name of Object to write to.  use with Save_To_Field.</description>
        <inlineHelpText>SiteScript: API name of Object to write to.  use with Save_To_Field.</inlineHelpText>
        <label>Write To Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fSiteScriptURL__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Script?id=&apos;+Id , &apos;Site Scipt&apos;, &apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Script Url</label>
        <type>Text</type>
    </fields>
    <label>Script</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Script_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <columns>Available_With__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Script Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Script</pluralLabel>
    <recordTypes>
        <fullName>CallScript</fullName>
        <active>true</active>
        <description>Call Script</description>
        <label>Call Script</label>
    </recordTypes>
    <recordTypes>
        <fullName>SiteScript</fullName>
        <active>true</active>
        <description>SiteScript</description>
        <label>SiteScript</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>